no.13 D - rename the carousel

--- a/edit/photos.html
+++ b/edit/photos.html
@@ -1952,7 +1952,7 @@
                                               <div class="relative" style="padding-bottom: 133.33%">
                                                 <div class="become-a-host__photos-img-cotainer">
                                                   <div class="hero-banner__content-bg">
-                                                    <div class="_e296pg hidden" style="padding-bottom: 133.33%;">
+                                                    <div class="carousel-slider__item-wrap hidden" style="padding-bottom: 133.33%;">
                                                       <div class="_1k2xyy0">
                                                         <div class="_1258d0t">
                                                           <div class="_vvli20" aria-label="Add more" role="button" tabindex="0"><svg viewBox="0 0 32 32"
@@ -2067,7 +2067,7 @@
                                               <div class="relative" style="padding-bottom: 133.33%">
                                                 <div class="become-a-host__photos-img-cotainer">
                                                   <div class="hero-banner__content-bg">
-                                                    <div class="_e296pg hidden" style="padding-bottom: 133.33%;">
+                                                    <div class="carousel-slider__item-wrap hidden" style="padding-bottom: 133.33%;">
                                                       <div class="_1k2xyy0">
                                                         <div class="_1258d0t">
                                                           <div class="_vvli20" aria-label="Add more" role="button" tabindex="0"><svg viewBox="0 0 32 32"
@@ -2182,7 +2182,7 @@
                                               <div class="relative" style="padding-bottom: 133.33%">
                                                 <div class="become-a-host__photos-img-cotainer">
                                                   <div class="hero-banner__content-bg">
-                                                    <div class="_e296pg hidden" style="padding-bottom: 133.33%;">
+                                                    <div class="carousel-slider__item-wrap hidden" style="padding-bottom: 133.33%;">
                                                       <div class="_1k2xyy0">
                                                         <div class="_1258d0t">
                                                           <div class="_vvli20" aria-label="Add more" role="button" tabindex="0"><svg viewBox="0 0 32 32"
@@ -2297,7 +2297,7 @@
                                               <div class="relative" style="padding-bottom: 133.33%">
                                                 <div class="become-a-host__photos-img-cotainer">
                                                   <div class="hero-banner__content-bg">
-                                                    <div class="_e296pg hidden" style="padding-bottom: 133.33%;">
+                                                    <div class="carousel-slider__item-wrap hidden" style="padding-bottom: 133.33%;">
                                                       <div class="_1k2xyy0">
                                                         <div class="_1258d0t">
                                                           <div class="_vvli20" aria-label="Add more" role="button" tabindex="0"><svg viewBox="0 0 32 32"
@@ -2412,7 +2412,7 @@
                                               <div class="relative" style="padding-bottom: 133.33%">
                                                 <div class="become-a-host__photos-img-cotainer">
                                                   <div class="hero-banner__content-bg">
-                                                    <div class="_e296pg hidden" style="padding-bottom: 133.33%;">
+                                                    <div class="carousel-slider__item-wrap hidden" style="padding-bottom: 133.33%;">
                                                       <div class="_1k2xyy0">
                                                         <div class="_1258d0t">
                                                           <div class="_vvli20" aria-label="Add more" role="button" tabindex="0"><svg viewBox="0 0 32 32"
@@ -2527,7 +2527,7 @@
                                               <div class="relative" style="padding-bottom: 133.33%">
                                                 <div class="become-a-host__photos-img-cotainer">
                                                   <div class="hero-banner__content-bg">
-                                                    <div class="_e296pg hidden" style="padding-bottom: 133.33%;">
+                                                    <div class="carousel-slider__item-wrap hidden" style="padding-bottom: 133.33%;">
                                                       <div class="_1k2xyy0">
                                                         <div class="_1258d0t">
                                                           <div class="_vvli20" aria-label="Add more" role="button" tabindex="0"><svg viewBox="0 0 32 32"
@@ -2642,7 +2642,7 @@
                                               <div class="relative" style="padding-bottom: 133.33%">
                                                 <div class="become-a-host__photos-img-cotainer">
                                                   <div class="hero-banner__content-bg">
-                                                    <div class="_e296pg hidden" style="padding-bottom: 133.33%;">
+                                                    <div class="carousel-slider__item-wrap hidden" style="padding-bottom: 133.33%;">
                                                       <div class="_1k2xyy0">
                                                         <div class="_1258d0t">
                                                           <div class="_vvli20" aria-label="Add more" role="button" tabindex="0"><svg viewBox="0 0 32 32"
@@ -2757,7 +2757,7 @@
                                               <div class="relative" style="padding-bottom: 133.33%">
                                                 <div class="become-a-host__photos-img-cotainer">
                                                   <div class="hero-banner__content-bg">
-                                                    <div class="_e296pg hidden" style="padding-bottom: 133.33%;">
+                                                    <div class="carousel-slider__item-wrap hidden" style="padding-bottom: 133.33%;">
                                                       <div class="_1k2xyy0">
                                                         <div class="_1258d0t">
                                                           <div class="_vvli20" aria-label="Add more" role="button" tabindex="0"><svg viewBox="0 0 32 32"
