--- a/help/help.html
+++ b/help/help.html
@@ -2003,7 +2003,7 @@
                                                   <span class="new-arrow-underscore"
                                                     >Viewing item 2 of 2</span
                                                   >
-                                                  <div class="_1aq9nzc">
+                                                  <div class="carousel-slider__list-m">
                                                     <div>
                                                       <div class="new-arrow-underscore">
                                                         <button
