--- a/landing-pages/articles.html
+++ b/landing-pages/articles.html
@@ -1231,14 +1231,14 @@
                               </div>
                              </div>
                              <div class="_g09g52">
-                              <ul class="_3uceys" style="margin-left: -10px; margin-right: -10px;">
+                              <ul class="carousel-slider__list" style="margin-left: -10px; margin-right: -10px;">
                                <li aria-hidden="false" data-key="35870760" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="35870760" class="_1yfus1e">
+                                <div data-key="35870760" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_35870760" class="l1d1x245 dir dir-ltr" href="/rooms/35870760?adults=1&amp;children=0&amp;infants=0" lang="en" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
@@ -1438,12 +1438,12 @@
                                 </div>
                                </li>
                                <li aria-hidden="false" data-key="3405072" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="3405072" class="_1yfus1e">
+                                <div data-key="3405072" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_3405072" class="l1d1x245 dir dir-ltr" href="/rooms/3405072?adults=1&amp;children=0&amp;infants=0" lang="en" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
@@ -1643,12 +1643,12 @@
                                 </div>
                                </li>
                                <li aria-hidden="false" data-key="48297920" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="48297920" class="_1yfus1e">
+                                <div data-key="48297920" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_48297920" class="l1d1x245 dir dir-ltr" href="/rooms/48297920?adults=1&amp;children=0&amp;infants=0" lang="en" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
@@ -1844,12 +1844,12 @@
                                 </div>
                                </li>
                                <li aria-hidden="false" data-key="573551901167807310" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="573551901167807310" class="_1yfus1e">
+                                <div data-key="573551901167807310" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_573551901167807310" class="l1d1x245 dir dir-ltr" href="/rooms/573551901167807310?adults=1&amp;children=0&amp;infants=0" lang="pl" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
@@ -2052,12 +2052,12 @@
                                 </div>
                                </li>
                                <li aria-hidden="false" data-key="37775390" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="37775390" class="_1yfus1e">
+                                <div data-key="37775390" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_37775390" class="l1d1x245 dir dir-ltr" href="/rooms/37775390?adults=1&amp;children=0&amp;infants=0" lang="en" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
@@ -2235,12 +2235,12 @@
                                 </div>
                                </li>
                                <li aria-hidden="false" data-key="19687130" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="19687130" class="_1yfus1e">
+                                <div data-key="19687130" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_19687130" class="l1d1x245 dir dir-ltr" href="/rooms/19687130?adults=1&amp;children=0&amp;infants=0" lang="nl" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
@@ -2418,12 +2418,12 @@
                                 </div>
                                </li>
                                <li aria-hidden="false" data-key="42088730" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="42088730" class="_1yfus1e">
+                                <div data-key="42088730" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_42088730" class="l1d1x245 dir dir-ltr" href="/rooms/42088730?adults=1&amp;children=0&amp;infants=0" lang="en" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
@@ -2601,12 +2601,12 @@
                                 </div>
                                </li>
                                <li aria-hidden="false" data-key="53710559" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="53710559" class="_1yfus1e">
+                                <div data-key="53710559" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_53710559" class="l1d1x245 dir dir-ltr" href="/rooms/53710559?adults=1&amp;children=0&amp;infants=0" lang="en" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
@@ -2788,12 +2788,12 @@
                                 </div>
                                </li>
                                <li aria-hidden="false" data-key="31649843" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="31649843" class="_1yfus1e">
+                                <div data-key="31649843" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_31649843" class="l1d1x245 dir dir-ltr" href="/rooms/31649843?adults=1&amp;children=0&amp;infants=0" lang="en" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
@@ -2975,12 +2975,12 @@
                                 </div>
                                </li>
                                <li aria-hidden="false" data-key="32817605" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="32817605" class="_1yfus1e">
+                                <div data-key="32817605" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_32817605" class="l1d1x245 dir dir-ltr" href="/rooms/32817605?adults=1&amp;children=0&amp;infants=0" lang="en" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
@@ -3158,12 +3158,12 @@
                                 </div>
                                </li>
                                <li aria-hidden="false" data-key="18989335" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="18989335" class="_1yfus1e">
+                                <div data-key="18989335" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_18989335" class="l1d1x245 dir dir-ltr" href="/rooms/18989335?adults=1&amp;children=0&amp;infants=0" lang="en" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
@@ -3341,12 +3341,12 @@
                                 </div>
                                </li>
                                <li aria-hidden="false" data-key="21527818" class="_1w7e1y2" style="border-width: 0px 10px; max-width: 25%; flex: 0 0 25%;">
-                                <div data-key="21527818" class="_1yfus1e">
+                                <div data-key="21527818" class="carousel-slider__item-wrapper">
                                  <div class="c1aqm3wp dir dir-ltr" role="group">
                                   <a aria-labelledby="title_21527818" class="l1d1x245 dir dir-ltr" href="/rooms/21527818?adults=1&amp;children=0&amp;infants=0" lang="en" rel="noopener noreferrer nofollow" target="_blank"></a>
                                   <div class="m5osunu dir dir-ltr">
                                    <div class="cza9200 cf0wwk1 cccwndf cof42p7 c1ex7ql7 dir dir-ltr" style="--media-container_border-radius: var(--i-g-gvoq);">
-                                    <div class="_e296pg">
+                                    <div class="carousel-slider__item-wrap">
                                      <div class="_1mx6kqf" style="background: var(--d-nc-lt-s); --dls-basecard-padding-top: 66.6667%;">
                                       <div class="_1szwzht">
                                        <span>
