--- a/landing-pages/merchandising.html
+++ b/landing-pages/merchandising.html
@@ -7563,20 +7563,20 @@
                                                     <span class="_14846yz">
                                                       <div
                                                         aria-hidden="false"
-                                                        class="_1uytoza"
+                                                        class="carousel-slider__nav-container"
                                                       >
                                                         <div class="flex">
                                                           <button
                                                             aria-label="Previous"
                                                             disabled=""
                                                             type="button"
-                                                            class="_sp8hvh"
+                                                            class="carousel-slider__nav-page-btn"
                                                           >
                                                             <span
                                                               class="relative"
                                                             >
                                                               <span
-                                                                class="_krjbj"
+                                                                class="carousel-slider__nav-icon-spacer"
                                                               >
                                                                 _
                                                               </span>
@@ -7610,13 +7610,13 @@
                                                           <button
                                                             aria-label="Next"
                                                             type="button"
-                                                            class="_sp8hvh"
+                                                            class="carousel-slider__nav-page-btn"
                                                           >
                                                             <span
                                                               class="relative"
                                                             >
                                                               <span
-                                                                class="_krjbj"
+                                                                class="carousel-slider__nav-icon-spacer"
                                                               >
                                                                 _
                                                               </span>
@@ -18212,17 +18212,17 @@
                                               <span class="_14846yz">
                                                 <div
                                                   aria-hidden="false"
-                                                  class="_1uytoza"
+                                                  class="carousel-slider__nav-container"
                                                 >
                                                   <div class="flex">
                                                     <button
                                                       aria-label="Previous"
                                                       disabled=""
                                                       type="button"
-                                                      class="_sp8hvh"
+                                                      class="carousel-slider__nav-page-btn"
                                                     >
                                                       <span class="relative">
-                                                        <span class="_krjbj">
+                                                        <span class="carousel-slider__nav-icon-spacer">
                                                           _
                                                         </span>
                                                         <svg
@@ -18255,10 +18255,10 @@
                                                     <button
                                                       aria-label="Next"
                                                       type="button"
-                                                      class="_sp8hvh"
+                                                      class="carousel-slider__nav-page-btn"
                                                     >
                                                       <span class="relative">
-                                                        <span class="_krjbj">
+                                                        <span class="carousel-slider__nav-icon-spacer">
                                                           _
                                                         </span>
                                                         <svg
