--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6534,7 +6534,7 @@
                                      <div class="_xmpqkp">Find restaurants, landmarks and more. You can add ones you want to visit to the map for reference.</div>
                                     </div>
                                     <ul aria-label="Search suggestions" id="Koan-map-poi-search-koan__listbox" class="_11zw87j"></ul>
-                                    <span id="Koan-map-poi-search-koan__description" class="_krjbj">Enter a search term and navigate forward to access suggestions.</span><span aria-atomic="true" aria-live="polite" role="status" class="_krjbj"></span>
+                                    <span id="Koan-map-poi-search-koan__description" class="carousel-slider__nav-icon-spacer">Enter a search term and navigate forward to access suggestions.</span><span aria-atomic="true" aria-live="polite" role="status" class="carousel-slider__nav-icon-spacer"></span>
                                    </div>
                                   </div>
                                 </div>
