--- a/payments/payment.html
+++ b/payments/payment.html
@@ -378,7 +378,7 @@
                                                             5; 135 reviews
                                                           </span>
                                                           <span
-                                                            class="_1lzlk52"
+                                                            class="carousel-slider__text-icon-container"
                                                           >
                                                             <svg
                                                               viewBox="0 0 32 32"
@@ -400,13 +400,13 @@
                                                             </svg>
                                                           </span>
                                                           <span
-                                                            class="_2a6au1i"
+                                                            class="carousel-slider__rate-percentage"
                                                             aria-hidden="true"
                                                           >
                                                             4.97
                                                           </span>
                                                           <span
-                                                            class="_a7a5sx"
+                                                            class="carousel-slider__rate-population"
                                                             aria-hidden="true"
                                                           >
                                                             &nbsp;(135 reviews)
@@ -424,7 +424,7 @@
                                                             5; 135 reviews
                                                           </span>
                                                           <span
-                                                            class="_1lzlk52"
+                                                            class="carousel-slider__text-icon-container"
                                                           >
                                                             <svg
                                                               viewBox="0 0 32 32"
@@ -446,13 +446,13 @@
                                                             </svg>
                                                           </span>
                                                           <span
-                                                            class="_2a6au1i"
+                                                            class="carousel-slider__rate-percentage"
                                                             aria-hidden="true"
                                                           >
                                                             4.97
                                                           </span>
                                                           <span
-                                                            class="_a7a5sx"
+                                                            class="carousel-slider__rate-population"
                                                             aria-hidden="true"
                                                           >
                                                             &nbsp;(135)
@@ -463,7 +463,7 @@
                                                     <div
                                                       class="flex-items-center"
                                                     >
-                                                      <span class="_a7a5sx">
+                                                      <span class="carousel-slider__rate-population">
                                                         •
                                                       </span>
                                                       <span
