--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6580,7 +6580,7 @@
               </div>
             </div>
             <div class="cob9xum czbu900 dir dir-ltr" style="--carousel-wrapper-margin:0px;">
-              <ul class="_3uceys" style="margin-left: -6px; margin-right: -6px; scroll-padding: 24px;">
+              <ul class="carousel-slider__list" style="margin-left: -6px; margin-right: -6px; scroll-padding: 24px;">
                 <div aria-hidden="true" style="flex: 0 0 24px;"></div>
                 <li aria-hidden="false" data-key="1654052" class="_1w7e1y2"
                   style="border-width: 0px 6px; max-width: 44.4444%; flex: 0 0 44.4444%;">
@@ -19681,7 +19681,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
             </div>
           </div>
           <div class="cob9xum dir dir-ltr" style="--carousel-wrapper-margin:0px;">
-            <ul class="_3uceys" style="margin-left: -8px; margin-right: -8px;">
+            <ul class="carousel-slider__list" style="margin-left: -8px; margin-right: -8px;">
               <li aria-hidden="false" data-key="48155514false" class="_1w7e1y2"
                 style="border-width: 0px 8px; max-width: 20%; flex: 0 0 20%;">
                 <div data-key="48155514false" class="h-full">
@@ -19961,7 +19961,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
               </div>
             </div>
             <div class="cob9xum dir dir-ltr" style="--carousel-wrapper-margin:0px;">
-              <ul class="_3uceys" style="margin-left: -6px; margin-right: -6px;">
+              <ul class="carousel-slider__list" style="margin-left: -6px; margin-right: -6px;">
                 <li aria-hidden="false" data-key="1654052" class="_1w7e1y2"
                   style="border-width: 0px 6px; max-width: 16.6667%; flex: 0 0 16.6667%;">
                   <div data-key="1654052" class="h-full">
@@ -22030,7 +22030,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                             </div>
                             <div class="_cpakol">
                               <div class="_14x8wq27">
-                                <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span class="relative"><span class="_krjbj">_</span><svg
+                                <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                                       viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                                       style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                                       <g fill="none">
@@ -22040,7 +22040,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                       </g>
                                     </svg></span></button></div>
                                 <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
-                                      class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                                      class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
@@ -22145,7 +22145,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                             <div class="_cpakol">
                               <div class="_14x8wq27">
                                 <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
-                                      class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                                      class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
@@ -22156,7 +22156,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                         </g>
                                       </svg></span></button></div>
                                 <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
-                                      class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                                      class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
@@ -22262,7 +22262,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                             <div class="_cpakol">
                               <div class="_14x8wq27">
                                 <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
-                                      class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                                      class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
@@ -22273,7 +22273,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                         </g>
                                       </svg></span></button></div>
                                 <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
-                                      class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                                      class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
@@ -22379,7 +22379,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                             <div class="_cpakol">
                               <div class="_14x8wq27">
                                 <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
-                                      class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                                      class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
@@ -22390,7 +22390,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                         </g>
                                       </svg></span></button></div>
                                 <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
-                                      class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                                      class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
@@ -22496,7 +22496,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                             <div class="_cpakol">
                               <div class="_14x8wq27">
                                 <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
-                                      class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                                      class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
@@ -22507,7 +22507,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                         </g>
                                       </svg></span></button></div>
                                 <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
-                                      class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                                      class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
                                         style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
