--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -22976,7 +22976,7 @@
               <div data-testid="photo-viewer-slideshow" class="_1kpe7lgb">
                 <div class="image-container">
                   <ul class="_rxz20bq" style="margin-left: -5px; margin-right: -5px;">
-                    <li aria-hidden="false" data-key="560470338" class="_145ocfuw" style="border-width: 0px 5px;">
+                    <li aria-hidden="false" data-key="560470338" class="carousel-slider__item" style="border-width: 0px 5px;">
                       <div data-key="560470338" class="h-full">
                         <div class="_onta11">
                           <div class="_vzls2v">
@@ -23016,7 +23016,7 @@
                       </div>
                     </li>
                   </ul>
-                  <div class="_1aq9nzc"></div>
+                  <div class="carousel-slider__list-m"></div>
                 </div>
               </div>
             </div>
@@ -23064,8 +23064,8 @@
               </div>
               <div data-testid="photo-viewer-slideshow" class="_1kpe7lgb">
                 <div class="image-container">
-                  <ul class="_3uceys" style="margin-left: -5px; margin-right: -5px;">
-                    <li aria-hidden="false" data-key="560470451" class="_145ocfuw" style="border-width: 0px 5px;">
+                  <ul class="carousel-slider__list" style="margin-left: -5px; margin-right: -5px;">
+                    <li aria-hidden="false" data-key="560470451" class="carousel-slider__item" style="border-width: 0px 5px;">
                       <div data-key="560470451" class="h-full">
                         <div class="_onta11">
                           <div class="_vzls2v">
@@ -23105,7 +23105,7 @@
                       </div>
                     </li>
                   </ul>
-                  <div class="_1aq9nzc"></div>
+                  <div class="carousel-slider__list-m"></div>
                 </div>
               </div>
             </div>
@@ -27272,7 +27272,7 @@
                   <div class="_14x8wq27">
                     <div class="_1lyyzem"></div>
                     <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
-                          class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                          class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                             style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                             <g fill="none">
@@ -27383,7 +27383,7 @@
                   <div class="_14x8wq27">
                     <div class="_1lyyzem">
                       <button aria-label="Previous" type="button" class="_1lotlmr">
-                        <span class="relative"><span class="_krjbj">_</span>
+                        <span class="relative"><span class="carousel-slider__nav-icon-spacer">_</span>
                         <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                           style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                           <g fill="none">
@@ -27396,7 +27396,7 @@
                     </div>
                     <div class="_1lyyzem">
                       <button aria-label="Next" type="button" class="_1lotlmr">
-                        <span class="relative"><span class="_krjbj">_</span>
+                        <span class="relative"><span class="carousel-slider__nav-icon-spacer">_</span>
                         <svg viewBox="0 0 32 32"
                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                             style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
