--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -15487,7 +15487,7 @@
             </div>
           </div>
           <div class="cob9xum dir dir-ltr" style="--carousel-wrapper-margin:0px;">
-            <ul class="_3uceys" style="margin-left: -8px; margin-right: -8px;">
+            <ul class="carousel-slider__list" style="margin-left: -8px; margin-right: -8px;">
               <li aria-hidden="false" data-key="Always fully equipped" class="_1w7e1y2"
                 style="border-width: 0px 8px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                 <div data-key="Always fully equipped" class="h-full">
@@ -21892,7 +21892,7 @@
               <div data-testid="photo-viewer-slideshow" class="_1kpe7lgb">
                 <div class="image-container">
                   <ul class="_rxz20bq" style="margin-left: -5px; margin-right: -5px;">
-                    <li aria-hidden="false" data-key="627033186" class="_145ocfuw" style="border-width: 0px 5px;">
+                    <li aria-hidden="false" data-key="627033186" class="carousel-slider__item" style="border-width: 0px 5px;">
                       <div data-key="627033186" class="h-full">
                         <div class="_onta11">
                           <div class="_vzls2v">
@@ -21932,7 +21932,7 @@
                       </div>
                     </li>
                   </ul>
-                  <div class="_1aq9nzc"></div>
+                  <div class="carousel-slider__list-m"></div>
                 </div>
               </div>
             </div>
@@ -21980,8 +21980,8 @@
             </div>
             <div data-testid="photo-viewer-slideshow" class="_1kpe7lgb">
               <div class="image-container">
-<ul class="_3uceys" style="margin-left: -5px; margin-right: -5px;">
-  <li aria-hidden="false" data-key="627031545" class="_145ocfuw" style="border-width: 0px 5px;">
+<ul class="carousel-slider__list" style="margin-left: -5px; margin-right: -5px;">
+  <li aria-hidden="false" data-key="627031545" class="carousel-slider__item" style="border-width: 0px 5px;">
     <div data-key="627031545" class="h-full">
       <div class="_onta11">
         <div class="_vzls2v">
@@ -22021,7 +22021,7 @@
     </div>
   </li>
 </ul>
-                <div class="_1aq9nzc"></div>
+                <div class="carousel-slider__list-m"></div>
               </div>
             </div>
           </div>
@@ -24666,7 +24666,7 @@
                   <div class="_14x8wq27">
                     <div class="_1lyyzem"></div>
                     <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
-                          class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                          class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                             style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                             <g fill="none">
@@ -24776,7 +24776,7 @@
                 <div class="_cpakol">
                   <div class="_14x8wq27">
                     <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
-                          class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                          class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                             style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                             <g fill="none">
@@ -24786,7 +24786,7 @@
                             </g>
                           </svg></span></button></div>
                     <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
-                          class="relative"><span class="_krjbj">_</span><svg viewBox="0 0 32 32"
+                          class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                             style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                             <g fill="none">
