--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -143,7 +143,7 @@
                                   <div class="_gykqwj">
                                     <span
                                       id="Koan-support-koan-input__description"
-                                      class="_krjbj"
+                                      class="carousel-slider__nav-icon-spacer"
                                     >
                                       Navigate forward to access suggested
                                       results
@@ -152,7 +152,7 @@
                                       aria-atomic="true"
                                       aria-live="polite"
                                       role="status"
-                                      class="_krjbj"
+                                      class="carousel-slider__nav-icon-spacer"
                                     ></span>
                                     <ul
                                       aria-label="Search suggestions"
