--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -145,7 +145,7 @@
                                   <div class="_gykqwj">
                                     <span
                                       id="Koan-support-koan-input__description"
-                                      class="_krjbj"
+                                      class="carousel-slider__nav-icon-spacer"
                                     >
                                       Navigate forward to access suggested
                                       results
@@ -154,7 +154,7 @@
                                       aria-atomic="true"
                                       aria-live="polite"
                                       role="status"
-                                      class="_krjbj"
+                                      class="carousel-slider__nav-icon-spacer"
                                     ></span>
                                     <ul
                                       aria-label="Search suggestions"
@@ -1015,7 +1015,7 @@
                                             <div data-showat="mediumAndAbove">
                                                 <div class="_eie8gyn">
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/easy-ways-to-help-attract-bookings-for-your-experience-400"
                                                                     class="link-block">
@@ -1054,7 +1054,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/setting-a-pricing-strategy-for-your-experience-397"
                                                                     class="link-block">
@@ -1093,7 +1093,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/how-a-co-host-can-help-grow-and-manage-your-experience-408"
                                                                     class="link-block">
@@ -1132,7 +1132,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/these-simple-host-tools-can-help-attract-more-guests-479"
                                                                     class="link-block">
@@ -1171,7 +1171,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/seo-tips-for-ranking-higher-in-search-512"
                                                                     class="link-block">
@@ -1210,7 +1210,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/how-seo-keywords-can-help-guests-find-your-experience-513"
                                                                     class="link-block">
@@ -1249,7 +1249,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/help-guests-with-disabilities-join-your-experience-438"
                                                                     class="link-block">
@@ -1288,7 +1288,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/experience-guest-spotlight-with-ranier-and-stephanie-402"
                                                                     class="link-block">
@@ -1334,7 +1334,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/who-books-airbnb-experiences-and-why-401"
                                                                     class="link-block">
@@ -1380,7 +1380,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/expand-your-business-into-different-languages-407"
                                                                     class="link-block">
@@ -1419,7 +1419,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/your-guide-to-a-standout-experience-page-398"
                                                                     class="link-block">
@@ -1458,7 +1458,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="_1yfus1e">
+                                                        <div class="carousel-slider__item-wrapper">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/promoting-your-experience-390"
                                                                     class="link-block">
