--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -145,7 +145,7 @@
                                   <div class="_gykqwj">
                                     <span
                                       id="Koan-support-koan-input__description"
-                                      class="_krjbj"
+                                      class="carousel-slider__nav-icon-spacer"
                                     >
                                       Navigate forward to access suggested
                                       results
@@ -154,7 +154,7 @@
                                       aria-atomic="true"
                                       aria-live="polite"
                                       role="status"
-                                      class="_krjbj"
+                                      class="carousel-slider__nav-icon-spacer"
                                     ></span>
                                     <ul
                                       aria-label="Search suggestions"
@@ -1185,7 +1185,7 @@
                                   <div data-showat="mediumAndAbove">
                                     <div class="_eie8gyn">
                                       <div class="_1tdgoer">
-                                        <div class="_1yfus1e">
+                                        <div class="carousel-slider__item-wrapper">
                                           <div class="_za5sya">
                                             <a href="/resources/hosting-experiences/a/promoting-your-experience-390" class="link-block">
                                               <div class="_w57qiaq">
@@ -1213,7 +1213,7 @@
                                         </div>
                                       </div>
                                       <div class="_1tdgoer">
-                                        <div class="_1yfus1e">
+                                        <div class="carousel-slider__item-wrapper">
                                           <div class="_za5sya">
                                             <a href="/resources/hosting-experiences/a/the-4-hospitality-keys-that-unlock-5-star-reviews-392" class="link-block">
                                               <div class="_w57qiaq">
@@ -1240,7 +1240,7 @@
                                         </div>
                                       </div>
                                       <div class="_1tdgoer">
-                                        <div class="_1yfus1e">
+                                        <div class="carousel-slider__item-wrapper">
                                           <div class="_za5sya">
                                             <a href="/resources/hosting-experiences/a/five-product-features-to-attract-more-guests-399" class="link-block">
                                               <div class="_w57qiaq">
